Устранил замечания в 8 уроке